Add get_my_info router and frontend

--- a/frontend/settings/index.html
+++ b/frontend/settings/index.html
@@ -13,6 +13,7 @@
         <a href="/frontend/auth/register">Регистрация</a>
         <a href="/logout">Выйти</a>
         <a href="/book">Бронирование</a>
+        <span id="username" style="float:right; color:white; padding: 14px 16px;"></span>
     </div>
 
     <h1>Настройки Администратора</h1>
