Add email displaying on all pages

--- a/frontend/auth/login/index.html
+++ b/frontend/auth/login/index.html
@@ -4,15 +4,17 @@
     <title>Вход</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="module" src="script.js" defer></script>
+    <script type="module" src="../../user_info.js" defer></script>
 </head>
-<body>
+<body onload="update_user_info();">
     <div class="menu">
         <a href="/">Главная</a>
-        <a href="/frontend/auth/settings">Админ панель</a>
+        <a href="/frontend/settings">Админ панель</a>
         <a href="/frontend/auth/login">Вход</a>
         <a href="/frontend/auth/register">Регистрация</a> 
         <a href="/logout">Выйти</a>
         <a href="/book">Бронирование</a>
+        <span id="username" style="float:right; color:white; padding: 14px 16px;"></span>
     </div>
 
     <h1>Вход</h1>
