--- a/frontend/settings/index.html
+++ b/frontend/settings/index.html
@@ -4,11 +4,12 @@
     <title>Настройки Администратора</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="module" src="script.js" defer></script>
+    <script type="module" src="../user_info.js" defer></script>
 </head>
 <body onload="displaySettings()">
     <div class="menu">
         <a href="/">Главная</a>
-        <a href="/frontend/auth/settings">Админ панель</a>
+        <a href="/frontend/settings">Админ панель</a>
         <a href="/frontend/auth/login">Вход</a>
         <a href="/frontend/auth/register">Регистрация</a>
         <a href="/logout">Выйти</a>
