Add displaying of timePeriods

--- a/frontend/schedule/index.html
+++ b/frontend/schedule/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бронирование ПК</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="module" src="script.js" defer></script>
     <script type="module" src="../user_info.js" defer></script>
 </head>
-<body onload="update_user_info();">
+<body>
     <div class="menu">
         <a href="/">Главная</a>
         <a href="/frontend/settings">Админ панель</a>
@@ -19,33 +21,13 @@
 
     <h1>Бронирование ПК</h1>
 
-    <div class="container">
+    <div id="pc-containers"></div>
+    <!-- <div class="container">
         <div class="pc-block">1</div>
         <div class="time-slot time-slot-black">12:00</div>
         <div class="time-slot time-slot-red">12:00</div>
         <div class="time-slot time-slot-green">12:00</div>
         <div class="time-slot time-slot-yellow">12:00</div>
-    </div>
-    <div class="container">
-        <div class="pc-block">2</div>
-        <div class="time-slot time-slot-black">12:00</div>
-        <div class="time-slot time-slot-red">12:00</div>
-        <div class="time-slot time-slot-green">12:00</div>
-        <div class="time-slot time-slot-yellow">12:00</div>
-    </div>
-    <div class="container">
-        <div class="pc-block">3</div>
-        <div class="time-slot time-slot-black">12:00</div>
-        <div class="time-slot time-slot-red">12:00</div>
-        <div class="time-slot time-slot-green">12:00</div>
-        <div class="time-slot time-slot-yellow">12:00</div>
-    </div>
-    <div class="container">
-        <div class="pc-block">4</div>
-        <div class="time-slot time-slot-black">12:00</div>
-        <div class="time-slot time-slot-red">12:00</div>
-        <div class="time-slot time-slot-green">12:00</div>
-        <div class="time-slot time-slot-yellow">12:00</div>
-    </div>
+    </div> -->
 </body>
 </html>
