--- a/frontend/auth/login/index.html
+++ b/frontend/auth/login/index.html
@@ -13,7 +13,7 @@
         <a href="/frontend/auth/login">Вход</a>
         <a href="/frontend/auth/register">Регистрация</a> 
         <a href="/logout">Выйти</a>
-        <a href="/book">Бронирование</a>
+        <a href="/frontend/schedule/">Бронирование</a>
         <span id="username" style="float:right; color:white; padding: 14px 16px;"></span>
     </div>
 
