--- a/frontend/schedule/index.html
+++ b/frontend/schedule/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <div class="menu">
+        <a href="/">Главная</a>
         <a href="/frontend/settings">Админ панель</a>
         <a href="/frontend/auth/login">Вход</a>
         <a href="/frontend/auth/register">Регистрация</a>
         <a href="/logout">Выйти</a>
-        <a href="/book">Бронирование</a>
+        <a href="/frontend/schedule/">Бронирование</a>
         <span id="username" style="float:right; color:white; padding: 14px 16px;"></span>
     </div>
 
