Add working logout button

--- a/frontend/auth/login/index.html
+++ b/frontend/auth/login/index.html
@@ -12,7 +12,7 @@
         <a href="/frontend/settings">Админ панель</a>
         <a href="/frontend/auth/login">Вход</a>
         <a href="/frontend/auth/register">Регистрация</a> 
-        <a href="/logout">Выйти</a>
+        <a id="logout_button">Выйти</a>
         <a href="/frontend/schedule/">Бронирование</a>
         <span id="username" style="float:right; color:white; padding: 14px 16px;"></span>
     </div>
