Rewrite js code in login register and schedule pages

--- a/frontend/schedule/index.html
+++ b/frontend/schedule/index.html
@@ -6,9 +6,8 @@
     <title>Бронирование ПК</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="module" src="script.js" defer></script>
-    <script type="module" src="../user_info.js" defer></script>
 </head>
-<body>
+<body onload="User.update_user_info();">
     <div class="menu">
         <a href="/">Главная</a>
         <a href="/frontend/settings">Админ панель</a>
