--- a/frontend/auth/register/index.html
+++ b/frontend/auth/register/index.html
@@ -4,9 +4,8 @@
     <title>Регистрация</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="module" src="script.js" defer></script>
-    <script type="module" src="../../user_info.js" defer></script>
 </head>
-<body onload="update_user_info();">
+<body onload="User.update_user_info();">
     <div class="menu">
         <a href="/">Главная</a>
         <a href="/frontend/settings">Админ панель</a>
@@ -18,7 +17,7 @@
     </div>
 
     <h1>Регистрация</h1>
-    <form onsubmit="event.preventDefault(); registerUser();">
+    <form onsubmit="event.preventDefault(); getDataAndRegister();">
         <label for="email">Электронная почта:</label>
         <input type="email" id="email" required>
         
