Add 2nd menu in admin panel. Fix some bugs

--- a/frontend/auth/register/index.html
+++ b/frontend/auth/register/index.html
@@ -29,5 +29,6 @@
         
         <button type="submit">Зарегистрироваться</button>
     </form>
+    <div id="message-container"></div>
 </body>
 </html>
