--- a/frontend/schedule/index.html
+++ b/frontend/schedule/index.html
@@ -28,5 +28,6 @@
         <div class="time-slot time-slot-green">12:00</div>
         <div class="time-slot time-slot-yellow">12:00</div>
     </div> -->
+    <div id="message-container"></div>
 </body>
 </html>
