Fix bug with GET avatar

--- a/frontend/auth/register/index.html
+++ b/frontend/auth/register/index.html
@@ -13,6 +13,7 @@
         <a href="/frontend/auth/register">Регистрация</a>
         <a id="logout_button">Выйти</a>
         <a href="/frontend/schedule/">Бронирование</a>
+        <a href="/frontend/profile/">Профиль</a>
         <span id="username" style="float:right; color:white; padding: 14px 16px;"></span>
     </div>
 
